# soundkid

./: Cargo.toml  README.md
.github/workflows/: pr.yaml
debian/: soundkid.service
hardware/: README.md
src/: config.rs  input.rs  lib.rs  player.rs  reader.rs  runtime.rs  uri.rs
tests/: dispatch.rs
tests/common/: mod.rs
