# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "soundkid"
version = "0.1.0"
authors = ["Thomas Bechtold <tbechtold@suse.com>"]
edition = "2018"
readme = "README.md"

[dependencies]
log = "0.4"
env_logger = "0.8"
glob = "0.3.0"
clap = "2.33.3"
evdev = { version = "0.11", features = ['tokio'] }
#evdev-rs = "0.3.1"
librespot = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
tokio = { version = "1", features = ["full"]}
http = "0.2.1"
dirs = "3.0"
gpio-cdev = { version = "0.5", features = ["async-tokio"]}
futures = { version = "0.3"}

[package.metadata.deb]
license-file = ["LICENSE"]
copyright = "Copyright (c) 2021, Thomas Bechtold <thomasbechtold@jpberlin.de>"
maintainer-scripts = "debian/"
systemd-units = { unit-name = "soundkid", enable = false }