[package]
name = "soundkid"
version = "0.2.0"
authors = ["Thomas Bechtold <tbechtold@suse.com>"]
edition = "2024"
rust-version = "1.85"
readme = "README.md"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
evdev = { version = "0.13", features = ["tokio"] }
futures = "0.3"
glob = "0.3"
gpio-cdev = { version = "0.6", features = ["async-tokio"] }
librespot = { version = "0.8", default-features = false, features = [
    "native-tls",
    "rodio-backend",
] }
librespot-oauth = "0.8"
serde = { version = "1", features = ["derive"] }
serde_yaml_ng = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "tracing-log"] }

[dev-dependencies]
tempfile = "3"

[package.metadata.deb]
license-file = ["LICENSE"]
copyright = "Copyright (c) 2021, Thomas Bechtold <thomasbechtold@jpberlin.de>"
maintainer-scripts = "debian/"
systemd-units = { unit-name = "soundkid", enable = false }
